Set additional default values. Create a basic example
Signed-off-by: cmoulliard <cmoulliard@redhat.com>