@@ -152,7 +152,6 @@
                 <version>${compiler-plugin.version}</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>-proc:full</arg>
                         <arg>-parameters</arg>
                         <arg>-Xlint:unchecked</arg>
                         <arg>-Xlint:deprecation</arg>
